--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "firebase": "^7.21.1",
+    "google-spreadsheet": "^3.0.13",
     "vee-validate": "^3.3.11",
     "vue": "^2.6.11",
     "vue-image-magnifier": "^0.2.1",
