--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vee-validate": "^3.3.11",
     "vue": "^2.6.11",
     "vue-image-magnifier": "^0.2.1",
+    "vue-recaptcha": "^1.3.0",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
