--- a/functions/package.json
+++ b/functions/package.json
@@ -14,9 +14,10 @@
   },
   "main": "index.js",
   "dependencies": {
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "firebase-admin": "^9.4.2",
-    "firebase-functions": "^3.13.0"
+    "firebase-functions": "^3.13.0",
+    "nodemailer": "^6.4.17"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
